Scrolling bar is not visible after update to FF 89.0 on Linux (KDE + Oxygen GTK engine)
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox96 | --- | fixed |
People
(Reporter: andrey.v.ponomarenko, Assigned: emilio)
References
Details
Attachments
(8 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:89.0) Gecko/20100101 Firefox/89.0
Steps to reproduce:
Installed latest version of Firefox 89.0 (64-bit) on CentOS-7. Vertical scrolling is visible only in black theme, but I don't like it. I like light themes.
Actual results:
Vertical scrolling is visible only in black theme.
Expected results:
Vertical scrolling is visible in light themes.
| Reporter | ||
Comment 1•5 years ago
|
||
UPDATE: seems that vertical scrolling is not visible in ALL themes. It's visible only on the Settings page, but not on real sites.
Comment 2•5 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Firefox::Theme' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
| Reporter | ||
Comment 3•5 years ago
|
||
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Comment 4•5 years ago
|
||
I have checked that this is Linux-specific issue. Ok on Windows.
Please fix ASAP because it's uncomfortable to work w/o the scrolling.
| Reporter | ||
Comment 5•5 years ago
|
||
Both vertical and horizontal bars are invisible.
Comment 6•5 years ago
|
||
Hi,
There are some on-going and known issues for Linux scrollbars for which developers are looking into and already fixing some, such as Bug 1714103.
Can you please let us know which GTK theme are you using?
| Assignee | ||
Comment 7•5 years ago
|
||
Yeah, this looks like bug 1714103, though info from the GTK theme would still be useful.
| Reporter | ||
Comment 8•5 years ago
|
||
GTK theme? I use KDE.
Comment 9•5 years ago
|
||
(In reply to andrey.v.ponomarenko from comment #8)
GTK theme? I use KDE.
Gtk themes are used even under KDE, Firfox does not have native KDe support.
| Reporter | ||
Comment 10•5 years ago
|
||
(In reply to Timea Cernea [:tbabos] from comment #6)
Can you please let us know which GTK theme are you using?
How to identify it?
Comment 11•5 years ago
|
||
Run gnome-tweaks application, go to 'Appearance' tab and check 'Applications' combobox.
| Reporter | ||
Comment 12•5 years ago
|
||
gnome-tweaks is not installed and requires a lot of packages to be installed in the system. Is where a simpler way to detect the theme?
| Assignee | ||
Comment 13•5 years ago
|
||
Can you go to https://nightly.mozilla.org, then download and extract it somewhere, then run MOZ_LOG=Widget:5 ./firefox? that should log your gtk theme. And also that build should show scrollbars, so if you can confirm that it'd be great.
| Reporter | ||
Comment 14•5 years ago
|
||
Probably this line:
[Parent 13693: Main Thread]: D/Widget System Theme: oxygen-gtk. Alt Theme: oxygen-gtk
| Reporter | ||
Comment 15•5 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #13)
And also that build should show scrollbars, so if you can confirm that it'd be great.
I've downloaded nightly build, but scrolling is still not shown in this version. See screenshot. I don't see any changes comparing with my current 89 version.
| Reporter | ||
Comment 16•5 years ago
|
||
| Reporter | ||
Comment 17•5 years ago
|
||
But looks like this build is from May, 31. The bug has been reported later.
| Assignee | ||
Comment 18•5 years ago
|
||
Ok it seems this has somehow a different root cause from bug 1714103. Reporter, which OS are you using? Oxygen is a gtk theme engine which doesn't work in recent gtk versions, so I'm going to need more specific info to repro this. Thanks.
| Reporter | ||
Comment 19•5 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #18)
Ok it seems this has somehow a different root cause from bug 1714103. Reporter, which OS are you using? Oxygen is a gtk theme engine which doesn't work in recent gtk versions, so I'm going to need more specific info to repro this. Thanks.
CentOS 7 / Fedora 21
| Assignee | ||
Comment 20•5 years ago
|
||
Ok, I'll try to repro, thanks! I'm still surprised that bug 1714103 didn't fix it, though...
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 21•5 years ago
|
||
So I downloaded a centos 7 VM, installed KDE, confirmed that oxygen-gtk is being used, but still I do see the scroll thumb, both in FF 89 and Nightly. What other appearance settings do you have that could impact this?
| Reporter | ||
Comment 22•5 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #21)
So I downloaded a centos 7 VM, installed KDE, confirmed that oxygen-gtk is being used, but still I do see the scroll thumb, both in FF 89 and Nightly. What other appearance settings do you have that could impact this?
I use the system since 2011. This is not possible to remember all changes (if any). But I don't usually change anything in the appearance.
I can provide more diagnostics info if needed. What particular appearance settings you are interested in? I can make a screenshot or attach output of some command line.
And second question - why this depends on the system at all? What has changed and how does it now depend on the system?
| Assignee | ||
Comment 23•5 years ago
|
||
(In reply to andrey.v.ponomarenko from comment #22)
(In reply to Emilio Cobos Álvarez (:emilio) from comment #21)
So I downloaded a centos 7 VM, installed KDE, confirmed that oxygen-gtk is being used, but still I do see the scroll thumb, both in FF 89 and Nightly. What other appearance settings do you have that could impact this?
I use the system since 2011. This is not possible to remember all changes (if any). But I don't usually change anything in the appearance.I can provide more diagnostics info if needed. What particular appearance settings you are interested in? I can make a screenshot or attach output of some command line.
Hmm, the "GTK+ appearance" settings are the ones that should be relevant here. Also the configuration in /usr/share/themes/oxygen-gtk.
And second question - why this depends on the system at all? What has changed and how does it now depend on the system?
Firefox used to draw native scrollbars using GTK, but we stopped doing that for memory usage / performance. We still get some colors from the GTK theme so that the scrollbars look native, but apparently for your theme configuration we're apparently getting a transparent scrollbar thumb... But that should've been prevented by bug 1714103, so that's why I'm confused as for why that didn't fix it.
Can you try Nightly again, just in case (make sure to close other Firefox instances before, since it seems in comment 17 you were using an older build)? This build should definitely have the fix. If it's not fixed I'll try to land some logging that could help figuring out the root cause of this.
| Reporter | ||
Comment 24•5 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #23)
Can you try Nightly again, just in case (make sure to close other Firefox instances before, since it seems in comment 17 you were using an older build)? This build should definitely have the fix. If it's not fixed I'll try to land some logging that could help figuring out the root cause of this.
Sitll the same. Am I trying it properly?: 1) Extract, 2) Go to extracted firefox/ directory and 3) Click on the firefox binary?
| Reporter | ||
Comment 25•5 years ago
|
||
| Reporter | ||
Comment 26•5 years ago
|
||
| Reporter | ||
Comment 27•5 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #23)
(In reply to andrey.v.ponomarenko from comment #22)
I can provide more diagnostics info if needed. What particular appearance settings you are interested in? I can make a screenshot or attach output of some command line.
Hmm, the "GTK+ appearance" settings are the ones that should be relevant here. Also the configuration in
/usr/share/themes/oxygen-gtk.
Please see compressed directory /usr/share/themes/oxygen-gtk in the attachment.
BTW
Why not to let me choose color of scroll bar manually in the about:config?
Thank you.
| Assignee | ||
Comment 28•5 years ago
|
||
Sitll the same. Am I trying it properly?: 1) Extract, 2) Go to extracted firefox/ directory and 3) Click on the firefox binary?
That should work if there's no other Firefox window open, yeah...
Ok, thanks for testing, I'll try to write some diagnostics and send a build your way to get more info. Is there anything interesting in ~/.config/gtk-3.0?
| Assignee | ||
Comment 29•5 years ago
|
||
You should be able to change these via about:config btw: ui.themedScrollbarThumb* are string prefs that take css colors: https://searchfox.org/mozilla-central/source/widget/nsXPLookAndFeel.cpp#227
| Reporter | ||
Comment 30•5 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #28)
Ok, thanks for testing, I'll try to write some diagnostics and send a build your way to get more info. Is there anything interesting in ~/.config/gtk-3.0?
There is only one file in this directory:
]$ cat ~/.config/gtk-3.0/bookmarks
file:///home/andrey/Downloads
| Assignee | ||
Updated•5 years ago
|
| Reporter | ||
Comment 31•5 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #29)
You should be able to change these via about:config btw: ui.themedScrollbarThumb* are string prefs that take css colors: https://searchfox.org/mozilla-central/source/widget/nsXPLookAndFeel.cpp#227
I've set:
ui.themedScrollbarThumbActive=Gray
ui.themedScrollbarThumb=Gray
ui.themedScrollbarThumbHover=Gray
And now I'm able to work again.
Thanks a lot!
| Assignee | ||
Comment 32•5 years ago
|
||
Let's see if that allows us to figure out what's going on here.
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 33•5 years ago
|
||
After the patch above lands (I'd give you a link for a try build but try is borked today), a log running nightly with MOZ_LOG=LookAndFeel:5 should shed some light into what's going on.
Comment 34•5 years ago
|
||
Comment 35•5 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 36•5 years ago
|
||
What should I do to collect necessary logs?
| Assignee | ||
Comment 37•5 years ago
|
||
MOZ_LOG=LookAndFeel:5 /path/to/nightly/firefox should do
| Reporter | ||
Comment 38•5 years ago
|
||
| Assignee | ||
Comment 40•4 years ago
|
||
Sorry this fell through the cracks. From the log above, it seems all your scrollbar colors are getting computed as the same (#d6d2d0):
[Parent 6796: Main Thread]: D/LookAndFeel * color 29: pref=ui.themedScrollbar success=1 value=ffd0d2d6
[Parent 6796: Main Thread]: D/LookAndFeel * color 30: pref=ui.themedScrollbarInactive success=1 value=ffd0d2d6
[Parent 6796: Main Thread]: D/LookAndFeel * color 31: pref=ui.themedScrollbarThumb success=1 value=ffd0d2d6
[Parent 6796: Main Thread]: D/LookAndFeel * color 32: pref=ui.themedScrollbarThumbHover success=1 value=ffd0d2d6
[Parent 6796: Main Thread]: D/LookAndFeel * color 33: pref=ui.themedScrollbarThumbActive success=1 value=ffd0d2d6
[Parent 6796: Main Thread]: D/LookAndFeel * color 34: pref=ui.themedScrollbarThumbInactive success=1 value=ffd0d2d6
You can customize those prefs as strings to work around it, but I'll land a fix on our side as well.
| Assignee | ||
Comment 41•4 years ago
|
||
Comment 42•4 years ago
|
||
Comment 43•4 years ago
|
||
| bugherder | ||
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Description
•