Bug 1713920 - Add some logging for native GTK colors. r=stransky

Let's see if that allows us to figure out what's going on here.

Differential Revision: https://phabricator.services.mozilla.com/D117893